--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio Website professor-rafael</title>
+  <title>Portfolio Website HITALO-CHEVONICA</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="icon.png">
   <link rel="stylesheet" href="responsive.css">
@@ -23,7 +23,7 @@
 
   ::-webkit-scrollbar-track 
   {
-      background: #001aff;
+      background: #d8daec;
   }
 
   ::-webkit-scrollbar-thumb 
