--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
       <section class="hero" id="hero">
         <div class="hero__content container">
-          <h3>Olá, sejam bem vindos a @rasinformatica</h3>
-          <h1 class="hero__title"> <span> Professor Programador</span></h1>
+          <h3>Olá, sejam bem vindos a @hitalochevonica</h3>
+          <h1 class="hero__title"> <span> Aluno Programador</span></h1>
           <p>Trabalho com atualização de drives, Software, formatação, modificação de bios de notebook e pc.</p>
           <a href="#proyects" class="hero__btn btn">Portfolio</a>
 
@@ -71,7 +71,7 @@
               <a href="https://www.youtube.com/channel/UCBRq6fO_-P6yPOVbC0yZVmQ"><i class="fa-brands fa-square-youtube"></i></a>
             </div>
             <div class="social-media__icon">
-              <a href="https://github.com/professor-rafael"><i class="fa-brands fa-github"></i></a>
+              <a href="https://github.com/hitalo20"><i class="fa-brands fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -123,55 +123,55 @@
 
           <div class="proyects__cards">
             <div class="proyects__card">
-              <img src="proyect1.jpg" alt="image of proyect" class="proyects__card-img">
+              <img src="foto1.jpeg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 1</h3>
-                <a href="https://github.com/professor-rafael/TrAbAlHo-SoBrE-IA"><i class="fa-brands fa-github"></i></a>
+                <a href="https://hitalo20.github.io/hitalobubu/"><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description">Trabalho sobre IA.</p>
               </div>
             </div>
 
             <div class="proyects__card">
-              <img src="proyect2.jpg" alt="image of proyect" class="proyects__card-img">
+              <img src="foto2.jpeg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 2</h3>
-                <a href="https://github.com/professor-rafael/projeto_--_uva_niagara"><i class="fa-brands fa-github"></i></a>
+                <a href="hhttps://hitalo20.github.io/Geradordesenha/"><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description">Web site sobre Uva Niágara.</p>
               </div>
             </div>
 
             <div class="proyects__card">
-              <img src="proyect3.jpg" alt="image of proyect" class="proyects__card-img">
+              <img src="foto3.jpeg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 3</h3>
-                <a href="https://github.com/professor-rafael/gerador_de_senhas"><i class="fa-brands fa-github"></i></a>
+                <a href="https://hitalo20.github.io/rede-sociais-Hitalo/"><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description">Web site sobre segurança digital.</p>
               </div>
             </div>
 
             <div class="proyects__card">
-              <img src="proyect4.jpg" alt="image of proyect" class="proyects__card-img">
+              <img src="foto4.jpeg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 4</h3>
-                <a href="https://github.com/professor-rafael/Javascript-projeto-de-vida"><i class="fa-brands fa-github"></i></a>
+                <a href="https://hitalo20.github.io/Geradordesenha/"><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description"> Web-site sobre Projeto de vida.</p>
               </div>
             </div>
 
             <div class="proyects__card">
-              <img src="proyect5.jpg" alt="image of proyect" class="proyects__card-img">
+              <img src="foto5.jpeg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 5</h3>
-                <a href="https://github.com/professor-rafael/FormaturaMariaHelena"><i class="fa-brands fa-github"></i></a>
+                <a href="https://hitalo20.github.io/hitalobubu/"><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description">Album de fotos com html e css.</p>
               </div>
             </div>
 
             <div class="proyects__card">
-              <img src="proyect6.jpg" alt="image of proyect" class="proyects__card-img">
+              <img src="foto6.jpeg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 6</h3>
-                <a href="https://github.com/professor-rafael/Efeito-Matrix"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/hitalo20/rede-sociais-Hitalo"><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description">Efeito matrix.</p>
               </div>
             </div>
