--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 
           <div class="social-media social-media--hero">
             <div class="social-media__icon">
-              <a href="https://api.whatsapp.com/send?phone=5543996561825"><i class="fa-brands fa-whatsapp"></i></a>
+              <a href="https://www.whatsapp.com/?lang=pt_BR"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
             <div class="social-media__icon">
-              <a href="https://www.youtube.com/channel/UCBRq6fO_-P6yPOVbC0yZVmQ"><i class="fa-brands fa-square-youtube"></i></a>
+              <a href="https://www.youtube.com/"><i class="fa-brands fa-square-youtube"></i></a>
             </div>
             <div class="social-media__icon">
               <a href="https://github.com/hitalo20"><i class="fa-brands fa-github"></i></a>
@@ -88,20 +88,21 @@
           <div class="services__cards">
             <div class="services__card">
               <i class="services__card-icon fa-solid fa-code"></i>
-              <h3 class="services__card-title">Back End</h3>
-              <p class="services__card-description"> Gosto de construir a estrutura lógica e funcional de uma web-site.</p>
+              <h3 class="services__card-title">Estudante</h3>
+              <p class="services__card-description"> Estudar é o que me move – cada novo conhecimento me motiva a ir mais longe. #FuturoAgrônomo</p>
             </div>
 
             <div class="services__card">
               <i class="services__card-icon fa-solid fa-pen-nib"></i>
-              <h3 class="services__card-title">Front End</h3>
-              <p class="services__card-description">Três linguagens de programação que gosto é html, css, main.js.</p>
+              <h3 class="services__card-title">Futebol</h3>
+              <p class="services__card-description">Jogar futebol é minha paixão – sinto a adrenalina de cada lance e a emoção de estar em campo.</p>
             </div>
 
             <div class="services__card">
               <i class="services__card-icon fa-solid fa-mobile"></i>
-              <h3 class="services__card-title">Técnico de Informática</h3>
-              <p class="services__card-description">Trabalho com formatação, upgrade de hd para ssd entre outros serviços.</p>
+              <h3 class="services__card-title">Gosto de laçar</h3>
+              <p class="services__card-description">Adoro a sensação de acertar o laço na hora certa, com precisão e agilidade. Assim como no meu hobby, acredito que a mesma atenção
+                 ao detalhe faz toda a diferença em tudo o que faço</p>
             </div>
           </div>
         </div>
@@ -110,9 +111,10 @@
       <section class="about" id="about">
         <div class="section__content container">
           <h2 class="section__title">Sobre mim</h2>
-          <p class="about__text">Olá, sou Rafael Assis Santos, Graduado em História Licenciatura, Pedagogia, Análise e Desenvolvimento de Sistemas, 
-          Teologia Biblíca do Novo Testamento, Especializações em Educação Especial, 
-          Educação do Campo, Metodologias do Ensino da Matemática e Tecnologia e Informação.</p>
+          <p class="about__text">Sou Hítalo Chevônica, estudante do Colégio Estadual Rio Branco. 
+            Quero ser agronomo para contribuir com o desenvolvimento sustentável no campo. 
+            Nas horas livres, gosto de praticar laço, esporte que me conecta com minhas raízes rurais. 
+            Estou focado em alcançar meus objetivos e fazer a diferença.</p>
           <a href="#contact" class="about__btn btn">Bora conversar</a>
         </div>
       </section>
@@ -127,7 +129,7 @@
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 1</h3>
                 <a href="https://hitalo20.github.io/hitalobubu/"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description">Trabalho sobre IA.</p>
+                <p class="proyects__card-description"> Efeito Matrix </p>
               </div>
             </div>
 
@@ -136,7 +138,7 @@
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 2</h3>
                 <a href="hhttps://hitalo20.github.io/Geradordesenha/"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description">Web site sobre Uva Niágara.</p>
+                <p class="proyects__card-description"> Gerador de senha</p>
               </div>
             </div>
 
@@ -145,7 +147,7 @@
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 3</h3>
                 <a href="https://hitalo20.github.io/rede-sociais-Hitalo/"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description">Web site sobre segurança digital.</p>
+                <p class="proyects__card-description">Rede Sociais Hitalo</p>
               </div>
             </div>
 
@@ -154,7 +156,7 @@
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 4</h3>
                 <a href="https://hitalo20.github.io/Geradordesenha/"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description"> Web-site sobre Projeto de vida.</p>
+                <p class="proyects__card-description"> Gerador de senha</p>
               </div>
             </div>
 
@@ -163,7 +165,7 @@
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 5</h3>
                 <a href="https://hitalo20.github.io/hitalobubu/"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description">Album de fotos com html e css.</p>
+                <p class="proyects__card-description">Efeito Matrix</p>
               </div>
             </div>
 
@@ -172,7 +174,7 @@
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 6</h3>
                 <a href="https://github.com/hitalo20/rede-sociais-Hitalo"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description">Efeito matrix.</p>
+                <p class="proyects__card-description">Redes Sociais</p>
               </div>
             </div>
 
@@ -189,13 +191,13 @@
             <p>Os contatos abaixo é para sanar as dúvidas, sobre os meus projetos disponível no GitHub.</p>
             <div class="social-media social-media--contact">
               <div class="social-media__icon">
-                <a href="https://api.whatsapp.com/send?phone=5543996561825"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://www.whatsapp.com/?lang=pt_BR"><i class="fa-brands fa-whatsapp"></i></a>
               </div>
               <div class="social-media__icon">
-                <a href="https://www.youtube.com/channel/UCBRq6fO_-P6yPOVbC0yZVmQ"><i class="fa-brands fa-square-youtube"></i></a>
+                <a href="https://www.youtube.com/"><i class="fa-brands fa-square-youtube"></i></a>
               </div>
               <div class="social-media__icon">
-                <a href="https://github.com/professor-rafael"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/hitalo20"><i class="fa-brands fa-github"></i></a>
               </div>
 
               <audio controls>
@@ -222,7 +224,7 @@
 
     </main>
   <footer class="footer container">
-    <p>@rasinformatica</p>
+    <p>hitalochevonica</p>
   </footer>
 
   <script src="main.js"></script>
