--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
 
           <div class="services__cards">
             <div class="services__card">
-              <i class="services__card-icon fa-solid fa-code"></i>
+              <i class="fa-solid fa-arrow-pointer"></i>
               <h3 class="services__card-title">Estudante</h3>
               <p class="services__card-description"> Estudar é o que me move – cada novo conhecimento me motiva a ir mais longe. #FuturoAgrônomo</p>
             </div>
 
             <div class="services__card">
-              <i class="services__card-icon fa-solid fa-pen-nib"></i>
+              <i class="fa-solid fa-futbol"></i>
               <h3 class="services__card-title">Futebol</h3>
               <p class="services__card-description">Jogar futebol é minha paixão – sinto a adrenalina de cada lance e a emoção de estar em campo.</p>
             </div>
 
             <div class="services__card">
-              <i class="services__card-icon fa-solid fa-mobile"></i>
+              <i class="fa-solid fa-cow"></i>
               <h3 class="services__card-title">Gosto de laçar</h3>
               <p class="services__card-description">Adoro a sensação de acertar o laço na hora certa, com precisão e agilidade. Assim como no meu hobby, acredito que a mesma atenção
                  ao detalhe faz toda a diferença em tudo o que faço</p>
@@ -201,9 +201,9 @@
               </div>
 
               <audio controls>
-                <source src="ras.mp3" type="audio/mp3">
-                <source src="ras.wav" type="audio/wav">
-                <source src="ras.ogg" type="audio/ogg">
+                <source src="Bruto de Raça - Antony & Gabriel, João Nelore & Texano part. Marco Brasil (Clipe Oficial).mp3" type="audio/mp3">
+                <source src="Bruto de Raça - Antony & Gabriel, João Nelore & Texano part. Marco Brasil (Clipe Oficial).mp3" type="audio/wav">
+                <source src="Bruto de Raça - Antony & Gabriel, João Nelore & Texano part. Marco Brasil (Clipe Oficial).mp3" type="audio/ogg">
               </audio>
 
             </div>
